[package]
name = "ham-rs"
version = "0.1.1"
authors = ["David Ricciardi <nricciar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
serde_derive = "1"
chrono = { version = "0.4.11", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
